# day-to-remember

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  Taskfile.yaml  pyproject.toml  tg_bot.Dockerfile  tg_bot.py  tg_schedule.Dockerfile  tg_schedule.py
.beads/: config.yaml  issues.jsonl
.zed/: tasks.json
app/domain/: errors.py  fact.py  review_period.py  review_session.py  user.py
app/dto/: abstract_message.py  buttons.py  telegram_callback.py  telegram_sending.py  telegram_shipment.py
app/infrastructure/: env.py
app/infrastructure/repositories/: fact.py  review_session.py  user.py
app/infrastructure/utils/: errors.py  humans.py  telegram.py
app/use_cases/: ask_for_facts.py  create_fact.py  plan_review_sessions.py  send_weekly_digest.py  set_weekly_fav.py  start_bot.py
deployment/production/: config.sealedsecret.yaml  github-day-to-remember.sealedsecret.yaml  namespace.yaml  tg-bot.deployment.yaml  tg-schedule.deployment.yaml
deployment/production/kargo/: projectconfig.yaml  stage.yaml  warehouse.yaml
